2006-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExprValue.java: Comment fixup.
        * src/jacl/tcl/lang/TclList.java (toString):
        Don't allocate a StringBuffer for an empty list.
        * src/tcljava/tcl/lang/FuncSig.java
        (getAccessibleConstructors): Fix minor bug where
        no accessible constructors could lead to a NPE.
        * src/tcljava/tcl/lang/TclObjectBase.java (toString,
        duplicate): Minor disposed object optimizations.
        * src/tests/tjc/TestTJC.java: Comment fixups.
        * tests/tcljava/FuncSig.test: Add test case
        for getAccessibleConstructors NPE.

2006-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

        Regenerate files that include version numbers
        because vsub.sh incorrectly wrote files with
        CRLF translation.

        * configure.in:
        * src/pkgIndex.tcl:
        * src/jacl/tcl/lang/Interp.java:
        * src/tcljava/tcl/lang/BlendExtension.java:
        * unix/tools/vutil/current:
        * unix/tools/vutil/fsub.tcl: Fixup file
        output logic so that lf translation is
        always used.
        * unix/tools/vutil/vsub.sh: Test for
        empty version argument.
        * win/makefile.vc:

2006-05-14  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/empty/empty.jar: Regen.
        * src/empty/tcl/lang/Util.java: Add fake
        method impl.
        * src/jacl/tcl/lang/Expression.java (ExprParseObject):
        Remove ugly logic that dealt with TclObject
        passed into expr module. The previous code
        needed to check every TclDouble to see if it
        looked like an int that was converted to a
        double. The TclDouble class will no longer
        convert a TclObject to a TclDouble if the
        string could be parsed as an integer.
        * src/jacl/tcl/lang/Util.java (isJacl,
        looksLikeInt): Add util methods for
        use in TclDouble class.
        * src/tclblend/tcl/lang/Util.java: Add